# cpp-sample

./: .clang-format  CMakeLists.txt  README.md
cmake/: googletest.cmake
src/: CMakeLists.txt  main.cpp
src/nn/: CMakeLists.txt  perceptron.cpp  perceptron.hpp
src/speed/: CMakeLists.txt  speed.cpp  speed.h  strongtype.hpp
tests/: CMakeLists.txt  speedgtest.cpp
